[package]
name = "borker-rs"
version = "0.1.6"
authors = ["Aiden McClelland <gagglehoof@gmail.com>"]
edition = "2018"

[lib]
name = "borker_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "borker_cli"
path = "src/main.rs"

#[features]
#default = ["console_error_panic_hook", "wee_alloc"]
[profile.release]
debug = true

[dependencies]
base58 = "0.1.0"
bigdecimal = { version = "0.0.15", features = ["serde"] }
bitcoin = "0.17.1"
bitcoin_hashes = "0.3.0"
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.3"
hex = "0.3.2"
hmac = "0.7.0"
js-sys = "0.3.5"
libsecp256k1 = "0.2.1"
pbkdf2 = { version = "0.3.0", default-features = false }
rand = { version = "0.6", features = ["wasm-bindgen"] }
ripemd160 = "0.8.0"
serde = "1.0.80"
serde_bytes = "0.10.4"
serde_cbor = "0.9.0"
serde_derive = "1.0.80"
serde_json = "1.0.33"
sha2 = "0.8.0"
wasm-bindgen = { version = "0.2.28", features = ["serde-serialize", "nightly"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.2", optional = true }
