[package]
name = "borker-rs"
version = "0.1.30"
authors = ["Aiden McClelland <gagglehoof@gmail.com>"]
edition = "2018"

[lib]
name = "borker_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "borker_cli"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
backtrace = "=0.3.3"
base58 = "0.1.0"
bigdecimal = { version = "0.1.2", features = ["serde"] }
bitcoin = "0.17.1"
bitcoin_hashes = "0.3.2"
chrono = { version = "0.4.11", features = ["serde"] }
ctrlc = { version = "3.1.4", optional = true }
failure = "0.1.8"
hex = "0.4.2"
hmac = "0.7.1"
js-sys = "0.3.40"
libsecp256k1 = "0.3.5"
pbkdf2 = { version = "0.3.0", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
ripemd160 = "0.8.0"
serde = "1.0.111"
serde_bytes = "0.11.4"
serde_cbor = "0.11.1"
serde_derive = "1.0.111"
serde_json = "1.0.53"
sha2 = "0.8.2"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize", "nightly"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
